--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div>Inglês</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                    <li><a href="#">Espanhol</a></li>
                     <li><a href="#">Inglês</a></li>
+                    <li><a href="#">Português</a></li>
                 </ul>
             </div>
             <div class="header__top__right__auth">
