--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
                             <span>Publicações</span>
                         </div>
                         <ul>
-                            <li><a href="#">Dicas alimentares 1</a></li>
-                            <li><a href="#">Apresentação de resultados</a></li>
+                            <li><a href="#">Dicas alimentares</a></li>
+                            <li><a href="#">Dietas Famosas</a></li>
                             <li><a href="#">Recomendações</a></li>
-                            <li><a href="#">A importancia de beber água</a></li>
+                            <li><a href="#">A importancia da Água</a></li>
                             <li><a href="#">Vitaminas</a></li>
                             <li><a href="#">Proteinas</a></li>
                             <li><a href="#">Por que evitar Fastfood?</a></li>
-                            <li><a href="#">Por que comer chocolate todos os dias?</a></li>
+                            <li><a href="#">Chocolate todos os dias?</a></li>
                             <li><a href="#">Melão ou melancia?</a></li>
-                            <li><a href="#">Café da manhã mais saudável</a></li>
-                            <li><a href="#">Etc</a></li>
+                            <li><a href="#">Café da manhã</a></li>
+                            <li><a href="#">...</a></li>
                         </ul>
                     </div>
                 </div>
@@ -210,15 +210,15 @@
                                 <i class="fa fa-phone"></i>
                             </div>
                             <div class="hero__search__phone__text">
-                                <h5>+65 11.188.888</h5>
+                                <h5>+35 9 9988-7766</h5>
                                 <span>Consultas a partir de R$130,00</span>
                             </div>
                         </div>
                     </div>
                     <div class="hero__item set-bg" data-setbg="img/hero/banner.jpg">
                         <div class="hero__text">
-                            <span>Alimente-se de forma saudável</span>
-                            <h2>Débora e/ou <br />Carla</h2>
+                            <span>Débora | Carla</span>
+                            <h2>Seja + <br />Saudável</h2>
                             <p>Podemos te ajudar a chegar lá</p>
                             <a href="#" class="primary-btn">Marcar Consulta</a>
                         </div>
@@ -276,10 +276,10 @@
                     <div class="featured__controls">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".oranges">Oranges</li>
-                            <li data-filter=".fresh-meat">Fresh Meat</li>
-                            <li data-filter=".vegetables">Vegetables</li>
-                            <li data-filter=".fastfood">Fastfood</li>
+                            <li data-filter=".oranges">Café da manhã</li>
+                            <li data-filter=".fresh-meat">Almoço</li>
+                            <li data-filter=".vegetables">Lanche</li>
+                            <li data-filter=".fastfood">Jantar</li>
                         </ul>
                     </div>
                 </div>
@@ -410,25 +410,6 @@
     </section>
     <!-- Featured Section End -->
 
-    <!-- Banner Begin -->
-    <div class="banner">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="banner__pic">
-                        <img src="img/banner/banner-1.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="banner__pic">
-                        <img src="img/banner/banner-2.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Banner End -->
-
     <!-- Blog Section Begin -->
     <section class="from-blog spad">
         <div class="container">
@@ -451,7 +432,7 @@
                                 <li><i class="fa fa-comment-o"></i> 5</li>
                             </ul>
                             <h5><a href="#">Dicas para uma alimentação balanceada</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <p>Por Débora | Carla</p>
                         </div>
                     </div>
                 </div>
@@ -466,7 +447,7 @@
                                 <li><i class="fa fa-comment-o"></i> 9</li>
                             </ul>
                             <h5><a href="#">Como aproveitar melhor os vegetais</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <p>Por Débora | Carla</p>
                         </div>
                     </div>
                 </div>
@@ -481,7 +462,7 @@
                                 <li><i class="fa fa-comment-o"></i> 107</li>
                             </ul>
                             <h5><a href="#">Apresentação para o hospital</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                            <p>Por Débora | Carla</p>
                         </div>
                     </div>
                 </div>
@@ -501,7 +482,7 @@
                         </div>
                         <ul>
                             <li>Endereço: Rua Tal 11378 Lavras</li>
-                            <li>Telefone: +65 11.188.888</li>
+                            <li>Telefone: +35 9 9988-7766</li>
                             <li>Email: carla|debora@snd.com</li>
                         </ul>
                     </div>
@@ -511,7 +492,7 @@
                         <h6>Links Uteis</h6>
                         <ul>
                             <li><a href="#">Sobre Mim</a></li>
-                            <li><a href="#">Nossa CArreira</a></li>
+                            <li><a href="#">Nossa Carreira</a></li>
                             <li><a href="#">Meus projetos</a></li>
                             <li><a href="#">Informações Contratuais</a></li>
                             <li><a href="#">Palestras</a></li>
@@ -539,7 +520,7 @@
                 <div class="col-lg-12">
                     <div class="footer__copyright">
                         <div class="footer__copyright__text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados a Carla e/ou Débora| Desenvolvido <i class="fa fa-heart" aria-hidden="true"></i> por <a href="https://colorlib.com" target="_blank">Otávio</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados a Carla e/ou Débora| Desenvolvido <i class="fa fa-coffee" aria-hidden="true"></i> por Otávio</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                         <div class="footer__copyright__payment"><img src="img/payment-item.png" alt=""></div>
                     </div>
