--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <a href="./index.html"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu">
                         <ul>
                             <li class="active"><a href="./index.html">Home</a></li>
@@ -275,7 +275,7 @@
                     </div>
                     <div class="featured__controls">
                         <ul>
-                            <li class="active" data-filter="*">All</li>
+                            <li class="active" data-filter="*">Todos</li>
                             <li data-filter=".oranges">Café da manhã</li>
                             <li data-filter=".fresh-meat">Almoço</li>
                             <li data-filter=".vegetables">Lanche</li>
@@ -295,8 +295,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Carne Picada</a></h6>
+                            <h5>0,5 Kg</h5>
                         </div>
                     </div>
                 </div>
@@ -310,8 +310,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Banana</a></h6>
+                            <h5>2 Unidades</h5>
                         </div>
                     </div>
                 </div>
@@ -325,8 +325,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Goiaba</a></h6>
+                            <h5>3 Unidades</h5>
                         </div>
                     </div>
                 </div>
@@ -340,8 +340,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Melância</a></h6>
+                            <h5>3 Fatias</h5>
                         </div>
                     </div>
                 </div>
@@ -355,8 +355,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Mirtílo</a></h6>
+                            <h5>7 Unidades</h5>
                         </div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                         </div>
                         <div class="featured__item__text">
                             <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h5>Nunca</h5>
                         </div>
                     </div>
                 </div>
@@ -385,8 +385,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Manga</a></h6>
+                            <h5>1 Unidade</h5>
                         </div>
                     </div>
                 </div>
@@ -400,8 +400,8 @@
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="#">Crab Pool Security</a></h6>
-                            <h5>$30.00</h5>
+                            <h6><a href="#">Maça</a></h6>
+                            <h5>1/2 Unidade</h5>
                         </div>
                     </div>
                 </div>
