--- a/blog-details.html
+++ b/blog-details.html
@@ -29,7 +29,7 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Humberger Begin -->
+     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper">
         <div class="humberger__menu__logo">
@@ -45,11 +45,11 @@
         <div class="humberger__menu__widget">
             <div class="header__top__right__language">
                 <img src="img/language.png" alt="">
-                <div>English</div>
+                <div>Inglês</div>
                 <span class="arrow_carrot-down"></span>
                 <ul>
-                    <li><a href="#">Spanis</a></li>
-                    <li><a href="#">English</a></li>
+                    <li><a href="#">Inglês</a></li>
+                    <li><a href="#">Português</a></li>
                 </ul>
             </div>
             <div class="header__top__right__auth">
@@ -59,17 +59,17 @@
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
                 <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./shop-grid.html">Shop</a></li>
-                <li><a href="#">Pages</a>
+                <li><a href="./shop-grid.html">Alimentos</a></li>
+                <li><a href="#">Minhas produções</a>
                     <ul class="header__menu__dropdown">
-                        <li><a href="./shop-details.html">Shop Details</a></li>
-                        <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                        <li><a href="./checkout.html">Check Out</a></li>
-                        <li><a href="./blog-details.html">Blog Details</a></li>
+                        <li><a href="./shop-details.html">Artigos</a></li>
+                        <li><a href="./shoping-cart.html">Projetos</a></li>
+                        <li><a href="./checkout.html">Recomendações</a></li>
+                        <li><a href="./blog-details.html">Prêmios</a></li>
                     </ul>
                 </li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="./blog.html">Meu Blog</a></li>
+                <li><a href="./contact.html">Sobre Mim</a></li>
             </ul>
         </nav>
         <div id="mobile-menu-wrap"></div>
@@ -81,8 +81,8 @@
         </div>
         <div class="humberger__menu__contact">
             <ul>
-                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                <li>Free Shipping for all Order of $99</li>
+                <li><i class="fa fa-envelope"></i> carla|debora@snd.com</li>
+                <li>Melhores nutricionistas do sistema solar</li>
             </ul>
         </div>
     </div>
@@ -93,15 +93,15 @@
         <div class="header__top">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i> hello@colorlib.com</li>
-                                <li>Free Shipping for all Order of $99</li>
+                                <li><i class="fa fa-envelope"></i> carla|debora@snd.com</li>
+                                <li>Melhores nutricionistas do sistema solar</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="header__top__right">
                             <div class="header__top__right__social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -111,11 +111,11 @@
                             </div>
                             <div class="header__top__right__language">
                                 <img src="img/language.png" alt="">
-                                <div>English</div>
+                                <div>Inglês</div>
                                 <span class="arrow_carrot-down"></span>
                                 <ul>
-                                    <li><a href="#">Spanis</a></li>
-                                    <li><a href="#">English</a></li>
+                                    <li><a href="#">Espanhol</a></li>
+                                    <li><a href="#">Inglês</a></li>
                                 </ul>
                             </div>
                             <div class="header__top__right__auth">
@@ -133,21 +133,21 @@
                         <a href="./index.html"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li class="active"><a href="./index.html">Home</a></li>
+                            <li><a href="./shop-grid.html">Dietas</a></li>
+                            <li><a href="#">Produções</a>
                                 <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="./shop-details.html">Artigos</a></li>
+                                    <li><a href="./shoping-cart.html">Projetos</a></li>
+                                    <li><a href="./checkout.html">Recomendações</a></li>
+                                    <li><a href="./blog-details.html">Prêmios</a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./blog.html">Meu Blog</a></li>
+                            <li><a href="./contact.html">Sobre Mim</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -167,7 +167,7 @@
         </div>
     </header>
     <!-- Header Section End -->
-
+    
     <!-- Hero Section Begin -->
     <section class="hero hero-normal">
         <div class="container">
