--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ogani | Template</title>
+    <title>Carla | Débora</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
@@ -176,7 +176,7 @@
                     <div class="hero__categories">
                         <div class="hero__categories__all">
                             <i class="fa fa-bars"></i>
-                            <span>All departments</span>
+                            <span>Todas</span>
                         </div>
                         <ul>
                             <li><a href="#">Fresh Meat</a></li>
@@ -201,8 +201,8 @@
                                     All Categories
                                     <span class="arrow_carrot-down"></span>
                                 </div>
-                                <input type="text" placeholder="What do yo u need?">
-                                <button type="submit" class="site-btn">SEARCH</button>
+                                <input type="text" placeholder="O que você precisa?">
+                                <button type="submit" class="site-btn">PROCURAR</button>
                             </form>
                         </div>
                         <div class="hero__search__phone">
@@ -227,10 +227,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Blog</h2>
+                        <h2>Meu Blog</h2>
                         <div class="breadcrumb__option">
-                            <a href="./index.html">Home</a>
-                            <span>Blog</span>
+                            <a href="./index.html"></a>
+                            <span>Por Débora | Carla</span>
                         </div>
                     </div>
                 </div>
@@ -247,18 +247,18 @@
                     <div class="blog__sidebar">
                         <div class="blog__sidebar__search">
                             <form action="#">
-                                <input type="text" placeholder="Search...">
+                                <input type="text" placeholder="Pesquisar...">
                                 <button type="submit"><span class="icon_search"></span></button>
                             </form>
                         </div>
                         <div class="blog__sidebar__item">
-                            <h4>Categories</h4>
+                            <h4>Categorias</h4>
                             <ul>
-                                <li><a href="#">All</a></li>
-                                <li><a href="#">Beauty (20)</a></li>
-                                <li><a href="#">Food (5)</a></li>
-                                <li><a href="#">Life Style (9)</a></li>
-                                <li><a href="#">Travel (10)</a></li>
+                                <li><a href="#">Todas</a></li>
+                                <li><a href="#">Vegetarianismo (20)</a></li>
+                                <li><a href="#">Lactário (5)</a></li>
+                                <li><a href="#">Nutrição (9)</a></li>
+                                <li><a href="#">Dietética (10)</a></li>
                             </ul>
                         </div>
                         <div class="blog__sidebar__item">
@@ -269,8 +269,8 @@
                                         <img src="img/blog/sidebar/sr-1.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>09 Kinds Of Vegetables<br /> Protect The Liver</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>9 tipos de vegetais que<br /> protegem o fígado</h6>
+                                        <span>MAR 05, 2020</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -278,8 +278,8 @@
                                         <img src="img/blog/sidebar/sr-2.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>Tips You To Balance<br /> Nutrition Meal Day</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>Dicas para balancear<br /> suas refeições</h6>
+                                        <span>FEV 12, 2019</span>
                                     </div>
                                 </a>
                                 <a href="#" class="blog__sidebar__recent__item">
@@ -287,21 +287,21 @@
                                         <img src="img/blog/sidebar/sr-3.jpg" alt="">
                                     </div>
                                     <div class="blog__sidebar__recent__item__text">
-                                        <h6>4 Principles Help You Lose <br />Weight With Vegetables</h6>
-                                        <span>MAR 05, 2019</span>
+                                        <h6>4 Princípios para perder <br />peso com vegetais</h6>
+                                        <span>JUN 22, 2018</span>
                                     </div>
                                 </a>
                             </div>
                         </div>
                         <div class="blog__sidebar__item">
-                            <h4>Search By</h4>
+                            <h4>Procurar por</h4>
                             <div class="blog__sidebar__item__tags">
-                                <a href="#">Apple</a>
-                                <a href="#">Beauty</a>
-                                <a href="#">Vegetables</a>
-                                <a href="#">Fruit</a>
-                                <a href="#">Healthy Food</a>
-                                <a href="#">Lifestyle</a>
+                                <a href="#">Maça</a>
+                                <a href="#">Beleza</a>
+                                <a href="#">Vegetais</a>
+                                <a href="#">Frutas</a>
+                                <a href="#">Comida Saudável</a>
+                                <a href="#">Estilo de Vida</a>
                             </div>
                         </div>
                     </div>
@@ -318,10 +318,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">6 maneiras de preparar o café da manhã</a></h5>
+                                    <p>Por Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -335,10 +334,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">Visit the clean farm in the US</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">Frutas Cítricas</a></h5>
+                                    <p>Por Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -352,10 +350,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">Dicas práticas para aproveitar sucos</a></h5>
+                                    <p>Por Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -369,10 +366,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">Meus prêmios - Parte 1</a></h5>
+                                    <p>Por Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -386,10 +382,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">The Moment You Need To Remove Garlic From The Menu</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">Meus prêmios - Parte 2</a></h5>
+                                    <p>Por Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
@@ -403,10 +398,9 @@
                                         <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
                                         <li><i class="fa fa-comment-o"></i> 5</li>
                                     </ul>
-                                    <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                                    <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam
-                                        quaerat </p>
-                                    <a href="#" class="blog__btn">READ MORE <span class="arrow_right"></span></a>
+                                    <h5><a href="#">O melhor da culinária italiana</a></h5>
+                                    <p>SPor Débora | Carla</p>
+                                    <a href="#" class="blog__btn">Leia Mais <span class="arrow_right"></span></a>
                                 </div>
                             </div>
                         </div>
