--- a/blog.html
+++ b/blog.html
@@ -59,13 +59,13 @@
         <nav class="humberger__menu__nav mobile-menu">
             <ul>
                 <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./shop-grid.html">Alimentos</a></li>
+                <li><a href="./blog.html">Alimentos</a></li>
                 <li><a href="#">Minhas produções</a>
                     <ul class="header__menu__dropdown">
-                        <li><a href="./shop-details.html">Artigos</a></li>
-                        <li><a href="./shoping-cart.html">Projetos</a></li>
-                        <li><a href="./checkout.html">Recomendações</a></li>
-                        <li><a href="./blog-details.html">Prêmios</a></li>
+                        <li><a href="./blog.html">Artigos</a></li>
+                        <li><a href="./blog.html">Projetos</a></li>
+                        <li><a href="./blog.html">Recomendações</a></li>
+                        <li><a href="./blog.html.html">Prêmios</a></li>
                     </ul>
                 </li>
                 <li><a href="./blog.html">Meu Blog</a></li>
